docker/glance: refactor image build

--- a/docker/glance/Dockerfile
+++ b/docker/glance/Dockerfile
@@ -1,9 +1,8 @@
 FROM local-registry:5000/openstack/openstack-base:latest
 
-RUN eatmydata apt-get install -y --no-install-recommends glance python-swiftclient \
-	&& rm -f /var/lib/glance/glance.sqlite
+# install and configure packages
+COPY build-image /tmp/
+RUN /tmp/build-image
 
-RUN mkdir -p /etc/service/glance-api /etc/service/glance-registry
-
-COPY glance-api.sh /etc/service/glance-api/run
-COPY glance-registry.sh /etc/service/glance-registry/run
+# add etc overlay
+COPY etc /etc/
