--- a/docker/keystone/etc/apache2/sites-available/wsgi-keystone.conf
+++ b/docker/keystone/etc/apache2/sites-available/wsgi-keystone.conf
@@ -1,3 +1,5 @@
+ServerName keystone
+
 <VirtualHost *:5000>
     WSGIDaemonProcess keystone-public processes=5 threads=1 user=keystone group=keystone display-name=%{GROUP}
     WSGIProcessGroup keystone-public
