docker/nova-compute: refactor image build

--- a/docker/nova-compute/Dockerfile
+++ b/docker/nova-compute/Dockerfile
@@ -1,16 +1,8 @@
 FROM local-registry:5000/openstack/openstack-base:latest
 
-# TODO: split this container in two, to separate libvirt and prevent
-# unecessary restarts
-# this should be possible with Docker 1.10 and mount propagation option
-# cf: https://github.com/docker/docker/issues/14630
+# install and configure packages
+COPY build-image /tmp/
+RUN /tmp/build-image
 
-RUN eatmydata apt-get install -y --no-install-recommends nova-compute sysfsutils \
-	cifs-utils nfs-common openvswitch-switch dmidecode pm-utils qemu-kvm \
-	&& rm -f /var/lib/nova/nova.sqlite \
-	&& rm -f /etc/libvirt/qemu/networks/autostart/default.xml
-
-RUN mkdir -p /etc/service/nova-compute /etc/service/libvirtd
-
-COPY nova-compute.sh /etc/service/nova-compute/run
-COPY libvirtd.sh /etc/service/libvirtd/run
+# add etc overlay
+COPY etc /etc/
