--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -14,7 +14,7 @@
 	<name>moustack agent</name>
 
 	<properties>
-		<main.class>com.adenops.moustack.agent.Main</main.class>
+		<main.class>com.adenops.moustack.agent.MoustackAgent</main.class>
 	</properties>
 
 	<build>
@@ -153,6 +153,25 @@
 			<groupId>org.eclipse.jgit</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
 			<version>4.3.0.201604071810-r</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.adenops.moustack</groupId>
+			<artifactId>moustack-server</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.4.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<repositories>
