--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -130,19 +130,9 @@
 			<version>4.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.docker-java</groupId>
-			<artifactId>docker-java</artifactId>
-			<version>3.0.0-RC5-PATCHED</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>commons-logging</artifactId>
-					<groupId>commons-logging</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jackson-annotations</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-			</exclusions>
+			<groupId>com.spotify</groupId>
+			<artifactId>docker-client</artifactId>
+			<version>5.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -152,7 +142,7 @@
 		<dependency>
 			<groupId>org.eclipse.jgit</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
-			<version>4.3.0.201604071810-r</version>
+			<version>4.4.0.201605250940-rc1</version>
 		</dependency>
 
 		<dependency>
