--- a/server/src/main/resources/database.properties
+++ b/server/src/main/resources/database.properties
@@ -2,5 +2,5 @@ hibernate.show_sql=false
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
+hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://%s/%s?createDatabaseIfNotExist=true&amp;useTimezone=true&amp;serverTimezone=UTC&amp;autoReconnect=true
