--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -8,31 +8,10 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
+	<groupId>com.adenops.moustack</groupId>
 	<artifactId>moustack-lib</artifactId>
-	<packaging>jar</packaging>
-
-	<name>moustack library</name>
+	<version>1.0-SNAPSHOT</version>
 
 	<dependencies>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.12</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.3</version>
-		</dependency>
 	</dependencies>
 </project>
