--- a/server/src/main/resources/database-mysql.properties
+++ b/server/src/main/resources/database-mysql.properties
@@ -3,4 +3,4 @@ hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://%s/%s?createDatabaseIfNotExist=true&amp;useTimezone=true&amp;serverTimezone=UTC&amp;autoReconnect=true
+hibernate.connection.url=jdbc:mysql://%s/%s?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC&autoReconnect=true
