--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,7 +12,8 @@
 
 	<properties>
 		<jetty-server.version>9.3.13.v20161014</jetty-server.version>
-		<jersey.version>2.24</jersey.version>
+		<!-- Warning: Jersey 2.24 breaks support for async requests, to be investigated -->
+		<jersey.version>2.23.2</jersey.version>
 		<swagger.version>1.5.10</swagger.version>
 
 		<hibernate.version>5.2.4.Final</hibernate.version>
@@ -87,7 +88,7 @@
 		<!-- REST -->
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
-			<artifactId>jersey-container-servlet-core</artifactId>
+			<artifactId>jersey-container-servlet</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
