--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<artifactId>moustack</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<url>https://github.com/adenops/moustack</url>
 
 	<properties>
 		<jgit.version>4.5.0.201609210915-r</jgit.version>
@@ -21,6 +22,8 @@
 		<assertj.version>3.5.2</assertj.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<package.release>1</package.release>
 	</properties>
 
 	<build>
@@ -28,6 +31,11 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/pkg</directory>
+				<filtering>true</filtering>
+				<targetPath>${project.build.directory}/pkg</targetPath>
 			</resource>
 		</resources>
 		<pluginManagement>
@@ -69,13 +77,9 @@
 							</filter>
 						</filters>
 						<transformers>
-							<!-- <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-								<mainClass>com.example.YourApp</mainClass> </transformer> -->
-							<transformer
-								implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+							<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 							<!-- https://issues.apache.org/jira/browse/LOG4J2-673 -->
-							<transformer
-								implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer" />
+							<transformer implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer" />
 						</transformers>
 					</configuration>
 					<dependencies>
@@ -96,6 +100,91 @@
 							<goals>
 								<goal>binary</goal>
 							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>rpm-maven-plugin</artifactId>
+					<version>2.1.5</version>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>attached-rpm</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<group>Application/System</group>
+						<autoRequires>false</autoRequires>
+						<copyTo>${project.build.directory}/${project.artifactId}-${project.version}-${package.release}.noarch.rpm</copyTo>
+						<requires>
+							<require>java-1.8.0-openjdk-headless</require>
+						</requires>
+						<mappings>
+							<mapping>
+								<directory>/usr/bin/</directory>
+								<directoryIncluded>false</directoryIncluded>
+								<filemode>755</filemode>
+								<sources>
+									<source>
+										<location>${project.build.directory}/${project.artifactId}</location>
+									</source>
+								</sources>
+							</mapping>
+							<mapping>
+								<directory>/lib/systemd/system/</directory>
+								<directoryIncluded>false</directoryIncluded>
+								<filemode>644</filemode>
+								<sources>
+									<source>
+										<location>${project.build.directory}/pkg/${project.artifactId}.service</location>
+									</source>
+								</sources>
+							</mapping>
+						</mappings>
+						<release>${package.release}</release>
+						<postinstallScriptlet>
+							<scriptFile>${project.build.directory}/pkg/postinst</scriptFile>
+							<fileEncoding>utf-8</fileEncoding>
+						</postinstallScriptlet>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.vafer</groupId>
+					<artifactId>jdeb</artifactId>
+					<version>1.5</version>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>jdeb</goal>
+							</goals>
+							<configuration>
+								<deb>${project.build.directory}/${project.artifactId}-${project.version}-${package.release}_all.deb</deb>
+								<controlDir>${project.build.directory}/pkg/deb</controlDir>
+								<dataSet>
+									<data>
+										<src>${project.build.directory}/${project.artifactId}</src>
+										<type>file</type>
+										<mapper>
+											<type>perm</type>
+											<prefix>/usr/bin</prefix>
+											<filemode>755</filemode>
+										</mapper>
+									</data>
+									<data>
+										<src>${project.build.directory}/pkg/${project.artifactId}.service</src>
+										<type>file</type>
+										<mapper>
+											<type>perm</type>
+											<filemode>644</filemode>
+											<prefix>/lib/systemd/system/</prefix>
+										</mapper>
+									</data>
+								</dataSet>
+							</configuration>
 						</execution>
 					</executions>
 				</plugin>
