--- a/docker/openstack-base/Dockerfile
+++ b/docker/openstack-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM local-registry:5000/openstack/ubuntu-base:latest
+FROM moustack/ubuntu-base:liberty
 
 # install and configure packages
 COPY build-image *.patch /tmp/
