add labels to docker images

--- a/docker/neutron-openvswitch/Makefile
+++ b/docker/neutron-openvswitch/Makefile
@@ -3,4 +3,5 @@ sinclude \
 	$(realpath $(dir $(MAKEFILE_LIST))/../..)/.local.mk \
 	$(realpath $(dir $(MAKEFILE_LIST))/../..)/include/make/*.mk
 
-DOCKER_IMAGE = $(DOCKER_IMAGE_PREFIX)neutron-openvswitch
+DOCKER_IMAGE      = $(DOCKER_IMAGE_PREFIX)neutron-openvswitch
+DOCKER_LABEL_NAME = $(DOCKER_LABEL_NAME_PREFIX)Neutron Open vSwitch
