--- a/docker/libvirt/Makefile
+++ b/docker/libvirt/Makefile
@@ -3,4 +3,5 @@ sinclude \
 	$(realpath $(dir $(MAKEFILE_LIST))/../..)/.local.mk \
 	$(realpath $(dir $(MAKEFILE_LIST))/../..)/include/make/*.mk
 
-DOCKER_IMAGE = $(DOCKER_IMAGE_PREFIX)libvirt
+DOCKER_IMAGE      = $(DOCKER_IMAGE_PREFIX)libvirt
+DOCKER_LABEL_NAME = $(DOCKER_LABEL_NAME_PREFIX)Libvirt
