--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.adenops.moustack</groupId>
 		<artifactId>moustack</artifactId>
-		<version>1.0.0</version>
+		<version>4.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>moustack-server</artifactId>
