docker: upgrade images to Ocata
Update images to Ubuntu 16.04 and Ocata. This is just a first pass to
make images build, most of them are probably broken.

Many Ceilometer components have been temporarily removed because there
are too many changes, the image will probably need to be completely
reworked.

--- a/docker/ceilometer-controller/Dockerfile
+++ b/docker/ceilometer-controller/Dockerfile
@@ -1,4 +1,4 @@
-FROM moustack/openstack-base:liberty
+FROM moustack/openstack-base:ocata
 
 # install and configure packages
 COPY build-image /tmp/
