--- a/docker/openstack-base/Dockerfile
+++ b/docker/openstack-base/Dockerfile
@@ -1,5 +1,5 @@
-FROM moustack/ubuntu-base:liberty
+FROM moustack/ubuntu-base:ocata
 
 # install and configure packages
-COPY build-image *.patch /tmp/
+COPY build-image /tmp/
 RUN /tmp/build-image
